--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,72 @@ FOG_kalmman3/project_tt.cache/wt/java_command_handlers.wdf
 FOG_kalmman3/project_tt.cache/wt/project.wpc
 FOG_kalmman3/project_tt.cache/wt/webtalk_pa.xml
 
+GRC/project_tt.xpr
+GRC/project_tt.runs/synth_1/vivado.pb
+GRC/project_tt.runs/synth_1/vivado.jou
+GRC/project_tt.runs/synth_1/runme.sh
+GRC/project_tt.runs/synth_1/runme.log
+GRC/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.rpt
+GRC/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.pb
+GRC/project_tt.runs/synth_1/red_pitaya_top.vds
+GRC/project_tt.runs/synth_1/red_pitaya_top.tcl
+GRC/project_tt.runs/synth_1/red_pitaya_top.dcp
+GRC/project_tt.runs/synth_1/ISEWrap.sh
+GRC/project_tt.runs/synth_1/ISEWrap.js
+GRC/project_tt.runs/synth_1/gen_run.xml
+GRC/project_tt.runs/synth_1/.Xil/red_pitaya_top_propImpl.xdc
+GRC/project_tt.runs/synth_1/.vivado.begin.rst
+GRC/project_tt.runs/impl_1/write_bitstream.pb
+GRC/project_tt.runs/impl_1/vivado_8300.backup.jou
+GRC/project_tt.runs/impl_1/vivado.pb
+GRC/project_tt.runs/impl_1/vivado.jou
+GRC/project_tt.runs/impl_1/usage_statistics_webtalk.xml
+GRC/project_tt.runs/impl_1/usage_statistics_webtalk.html
+GRC/project_tt.runs/impl_1/runme.sh
+GRC/project_tt.runs/impl_1/runme.log
+GRC/project_tt.runs/impl_1/rundef.js
+GRC/project_tt.runs/impl_1/route_design.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_routed.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_route_status.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_route_status.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_summary_routed.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_placed.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_opt.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_io_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_opted.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_control_sets_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_clock_utilization_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top.vdi
+GRC/project_tt.runs/impl_1/red_pitaya_top.tcl
+GRC/project_tt.runs/impl_1/red_pitaya_top.sysdef
+GRC/project_tt.runs/impl_1/red_pitaya_top.hwdef
+GRC/project_tt.runs/impl_1/red_pitaya_top.bit
+GRC/project_tt.runs/impl_1/place_design.pb
+GRC/project_tt.runs/impl_1/opt_design.pb
+GRC/project_tt.runs/impl_1/ISEWrap.sh
+GRC/project_tt.runs/impl_1/ISEWrap.js
+GRC/project_tt.runs/impl_1/init_design.pb
+GRC/project_tt.runs/impl_1/gen_run.xml
+GRC/project_tt.runs/impl_1/.write_bitstream.begin.rst
+GRC/project_tt.runs/impl_1/.vivado.begin.rst
+GRC/project_tt.runs/impl_1/.route_design.begin.rst
+GRC/project_tt.runs/impl_1/.place_design.begin.rst
+GRC/project_tt.runs/impl_1/.opt_design.begin.rst
+GRC/project_tt.runs/impl_1/.init_design.begin.rst
+GRC/project_tt.runs/.jobs/vrs_config_154.xml
+GRC/project_tt.runs/.jobs/vrs_config_153.xml
+GRC/project_tt.cache/wt/webtalk_pa.xml
+GRC/project_tt.cache/wt/synthesis.wdf
+GRC/project_tt.cache/wt/project.wpc
+GRC/project_tt.cache/wt/java_command_handlers.wdf
+GRC/project_tt.cache/wt/gui_resources.wdf
