--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ GRC/project_tt.cache/wt/synthesis.wdf
 GRC/project_tt.cache/wt/project.wpc
 GRC/project_tt.cache/wt/java_command_handlers.wdf
 GRC/project_tt.cache/wt/gui_resources.wdf
+GRC/project_tt.cache/wt/gui_resources.wdf
+GRC/project_tt.cache/wt/java_command_handlers.wdf
+GRC/project_tt.cache/wt/webtalk_pa.xml
