--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,83 @@ GRC/project_tt.cache/wt/gui_resources.wdf
 GRC/project_tt.cache/wt/gui_resources.wdf
 GRC/project_tt.cache/wt/java_command_handlers.wdf
 GRC/project_tt.cache/wt/webtalk_pa.xml
+GRC/project_tt.runs/system_xlconstant_0_synth_1/gen_run.xml
+GRC/project_tt.runs/system_xadc_0_synth_1/gen_run.xml
+GRC/project_tt.runs/system_processing_system7_0_synth_1/gen_run.xml
+GRC/project_tt.runs/system_proc_sys_reset_0_synth_1/gen_run.xml
+GRC/project_tt.runs/system_axi_protocol_converter_0_0_synth_1/gen_run.xml
+GRC/project_tt.runs/synth_1/vivado.pb
+GRC/project_tt.runs/synth_1/vivado.jou
+GRC/project_tt.runs/synth_1/runme.log
+GRC/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.rpt
+GRC/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.pb
+GRC/project_tt.runs/synth_1/red_pitaya_top.vds
+GRC/project_tt.runs/synth_1/red_pitaya_top.dcp
+GRC/project_tt.runs/synth_1/gen_run.xml
+GRC/project_tt.runs/synth_1/.vivado.begin.rst
+GRC/project_tt.runs/impl_1/write_bitstream.pb
+GRC/project_tt.runs/impl_1/vivado.pb
+GRC/project_tt.runs/impl_1/vivado.jou
+GRC/project_tt.runs/impl_1/usage_statistics_webtalk.xml
+GRC/project_tt.runs/impl_1/usage_statistics_webtalk.html
+GRC/project_tt.runs/impl_1/runme.log
+GRC/project_tt.runs/impl_1/route_design.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_routed.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_route_status.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_route_status.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_summary_routed.pb
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_placed.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_opt.dcp
+GRC/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_io_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpx
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_drc_opted.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_control_sets_placed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top_clock_utilization_routed.rpt
+GRC/project_tt.runs/impl_1/red_pitaya_top.vdi
+GRC/project_tt.runs/impl_1/red_pitaya_top.sysdef
+GRC/project_tt.runs/impl_1/red_pitaya_top.hwdef
+GRC/project_tt.runs/impl_1/red_pitaya_top.bit
+GRC/project_tt.runs/impl_1/place_design.pb
+GRC/project_tt.runs/impl_1/opt_design.pb
+GRC/project_tt.runs/impl_1/init_design.pb
+GRC/project_tt.runs/impl_1/hs_err_pid4092.log
+GRC/project_tt.runs/impl_1/hs_err_pid4092.dmp
+GRC/project_tt.runs/impl_1/gen_run.xml
+GRC/project_tt.runs/impl_1/.write_bitstream.begin.rst
+GRC/project_tt.runs/impl_1/.vivado.begin.rst
+GRC/project_tt.runs/impl_1/.route_design.begin.rst
+GRC/project_tt.runs/impl_1/.place_design.begin.rst
+GRC/project_tt.runs/impl_1/.opt_design.begin.rst
+GRC/project_tt.runs/impl_1/.init_design.begin.rst
+GRC/project_tt.runs/.jobs/vrs_config_172.xml
+GRC/project_tt.runs/.jobs/vrs_config_171.xml
+GRC/project_tt.runs/.jobs/vrs_config_170.xml
+GRC/project_tt.runs/.jobs/vrs_config_169.xml
+GRC/project_tt.runs/.jobs/vrs_config_168.xml
+GRC/project_tt.runs/.jobs/vrs_config_167.xml
+GRC/project_tt.runs/.jobs/vrs_config_166.xml
+GRC/project_tt.runs/.jobs/vrs_config_165.xml
+GRC/project_tt.runs/.jobs/vrs_config_164.xml
+GRC/project_tt.runs/.jobs/vrs_config_163.xml
+GRC/project_tt.runs/.jobs/vrs_config_162.xml
+GRC/project_tt.runs/.jobs/vrs_config_161.xml
+GRC/project_tt.runs/.jobs/vrs_config_160.xml
+GRC/project_tt.runs/.jobs/vrs_config_159.xml
+GRC/project_tt.runs/.jobs/vrs_config_158.xml
+GRC/project_tt.runs/.jobs/vrs_config_157.xml
+GRC/project_tt.runs/.jobs/vrs_config_156.xml
+GRC/project_tt.runs/.jobs/vrs_config_155.xml
+GRC/project_tt.cache/wt/webtalk_pa.xml
+GRC/project_tt.cache/wt/synthesis.wdf
+GRC/project_tt.cache/wt/project.wpc
+GRC/project_tt.cache/wt/java_command_handlers.wdf
+GRC/project_tt.cache/wt/gui_resources.wdf
