--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,82 @@ GRC/project_tt.cache/wt/synthesis.wdf
 GRC/project_tt.cache/wt/project.wpc
 GRC/project_tt.cache/wt/java_command_handlers.wdf
 GRC/project_tt.cache/wt/gui_resources.wdf
+FOG_kalmman3/project_tt.xpr
+FOG_kalmman3/project_tt.runs/system_xlconstant_0_synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/system_xadc_0_synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/system_processing_system7_0_synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/system_proc_sys_reset_0_synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/system_axi_protocol_converter_0_0_synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/synth_1/vivado.pb
+FOG_kalmman3/project_tt.runs/synth_1/vivado.jou
+FOG_kalmman3/project_tt.runs/synth_1/runme.sh
+FOG_kalmman3/project_tt.runs/synth_1/runme.log
+FOG_kalmman3/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.rpt
+FOG_kalmman3/project_tt.runs/synth_1/red_pitaya_top_utilization_synth.pb
+FOG_kalmman3/project_tt.runs/synth_1/red_pitaya_top.vds
+FOG_kalmman3/project_tt.runs/synth_1/red_pitaya_top.tcl
+FOG_kalmman3/project_tt.runs/synth_1/red_pitaya_top.dcp
+FOG_kalmman3/project_tt.runs/synth_1/project.wdf
+FOG_kalmman3/project_tt.runs/synth_1/ISEWrap.sh
+FOG_kalmman3/project_tt.runs/synth_1/ISEWrap.js
+FOG_kalmman3/project_tt.runs/synth_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/synth_1/.Xil/red_pitaya_top_propImpl.xdc
+FOG_kalmman3/project_tt.runs/synth_1/.vivado.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/write_bitstream.pb
+FOG_kalmman3/project_tt.runs/impl_1/vivado_21096.backup.jou
+FOG_kalmman3/project_tt.runs/impl_1/vivado_11732.backup.jou
+FOG_kalmman3/project_tt.runs/impl_1/vivado.pb
+FOG_kalmman3/project_tt.runs/impl_1/vivado.jou
+FOG_kalmman3/project_tt.runs/impl_1/usage_statistics_webtalk.xml
+FOG_kalmman3/project_tt.runs/impl_1/usage_statistics_webtalk.html
+FOG_kalmman3/project_tt.runs/impl_1/runme.sh
+FOG_kalmman3/project_tt.runs/impl_1/runme.log
+FOG_kalmman3/project_tt.runs/impl_1/rundef.js
+FOG_kalmman3/project_tt.runs/impl_1/route_design.pb
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_utilization_placed.pb
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpx
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_timing_summary_routed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_routed.dcp
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_route_status.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_route_status.pb
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_power_summary_routed.pb
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpx
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_power_routed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_placed.dcp
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_opt.dcp
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpx
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_methodology_drc_routed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_io_placed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpx
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_drc_routed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_drc_opted.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_control_sets_placed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_clock_utilization_routed.rpt
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_7608.backup.vdi
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top_21096.backup.vdi
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top.vdi
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top.tcl
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top.sysdef
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top.hwdef
+FOG_kalmman3/project_tt.runs/impl_1/red_pitaya_top.bit
+FOG_kalmman3/project_tt.runs/impl_1/place_design.pb
+FOG_kalmman3/project_tt.runs/impl_1/opt_design.pb
+FOG_kalmman3/project_tt.runs/impl_1/ISEWrap.sh
+FOG_kalmman3/project_tt.runs/impl_1/ISEWrap.js
+FOG_kalmman3/project_tt.runs/impl_1/init_design.pb
+FOG_kalmman3/project_tt.runs/impl_1/gen_run.xml
+FOG_kalmman3/project_tt.runs/impl_1/.write_bitstream.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/.vivado.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/.route_design.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/.place_design.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/.opt_design.begin.rst
+FOG_kalmman3/project_tt.runs/impl_1/.init_design.begin.rst
+FOG_kalmman3/project_tt.runs/.jobs/vrs_config_344.xml
+FOG_kalmman3/project_tt.runs/.jobs/vrs_config_343.xml
+FOG_kalmman3/project_tt.runs/.jobs/vrs_config_342.xml
+FOG_kalmman3/project_tt.cache/wt/webtalk_pa.xml
+FOG_kalmman3/project_tt.cache/wt/synthesis.wdf
+FOG_kalmman3/project_tt.cache/wt/project.wpc
+FOG_kalmman3/project_tt.cache/wt/java_command_handlers.wdf
+FOG_kalmman3/project_tt.cache/wt/gui_resources.wdf
