--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+*/project_tt.cache/
+*/project_tt.runs/
 FOG_kalmman3/project_tt.cache/wt/gui_resources.wdf
 FOG_kalmman3/project_tt.cache/wt/java_command_handlers.wdf
 FOG_kalmman3/project_tt.cache/wt/project.wpc
